fixed graphic cutoff

--- a/src/components/tech-brand-carousel/sass/tech-brand-carousel.scss
+++ b/src/components/tech-brand-carousel/sass/tech-brand-carousel.scss
@@ -89,7 +89,8 @@
 
 @media only screen and (max-width: 767px) {
     .feature-brand-corousel.brand_list .container-fluid {
-        padding: 0px 5px;
+        padding-left: 7.5px;
+        padding-right: 7.5px;
     }
 
     .feature-brand-corousel.brand_list .img-right {
